# tcp-commander

./: .taurignore  Cargo.toml  LICENSE  README.md  build_android.luau  index.html  styles.css
src/: app.rs  main.rs  model.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tauri-plugin-tcp-client/: .gitignore  Cargo.toml  README.md  build.rs  package.json
tauri-plugin-tcp-client/android/: build.gradle.kts  local.properties
tauri-plugin-tcp-client/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-tcp-client/android/src/main/java/: TcpClient.kt  TcpClientPlugin.kt
tauri-plugin-tcp-client/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-tcp-client/examples/tauri-app/: package.json
tauri-plugin-tcp-client/examples/tauri-app/src/: App.svelte
tauri-plugin-tcp-client/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-tcp-client/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-tcp-client/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-tcp-client/guest-js/: index.ts
tauri-plugin-tcp-client/permissions/: default.toml
tauri-plugin-tcp-client/permissions/autogenerated/: reference.md
tauri-plugin-tcp-client/permissions/autogenerated/commands/: transmit.toml
tauri-plugin-tcp-client/permissions/schemas/: schema.json
tauri-plugin-tcp-client/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
